--- a/22-HTML/home.html
+++ b/22-HTML/home.html
@@ -5,6 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h2 {
+            color: #c9c9c9;
+            font-size: 100px;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        marquee {
+            color: blue;
+
+        }
+    </style>
 </head>
 
 <body>
